# litres_reqres_diploma

./: .env.example  .gitignore  Jenkinsfile  README.md  pyproject.toml  requirements.txt
docs/: testops_manual_cases.md
litres_reqres_diploma/api/: reqres_client.py
litres_reqres_diploma/config/: api_config.py  mobile_config.py  web_config.py
litres_reqres_diploma/data/schemas/: created_user.json  error.json  single_user.json  updated_user.json  users_list.json
litres_reqres_diploma/models/: reqres.py
litres_reqres_diploma/pages/: login_page.py  main_page.py
litres_reqres_diploma/pages/mobile/: litres_app.py
litres_reqres_diploma/resources/: search_data.json
litres_reqres_diploma/utils/: allure_attach.py  json_reader.py  paths.py  schema.py
tests/: conftest.py
tests/api/: api_tests.md  test_reqres_api.py
tests/mobile/: mobile_tests.md  test_litres_mobile.py
tests/web/: test_login.py  test_navigation.py  test_search.py  ui_tests.md
